# AfroConnect

./: .easignore  .gitignore  .replit  .snyk  package-lock.json  package.json  pyproject.toml  replit.md  replit.nix  skills-lock.json  sonar-project.properties
.agents/: agent_assets_metadata.toml
.expo/: settings.json
admin-dashboard/: App.tsx  Constants.tsx  constants.tsx  index.css  index.html  index.tsx  metadata.json  package-lock.json  package.json  tailwind.config.js  tsconfig.json  types.ts  vite-index.html  vite.config.ts
attached_assets/: Pasted--WARN-expo-image-picker-ImagePicker-MediaTypeOptions-ha_1770470743597.txt  Pasted--public-agora-call-html-GATEWAY-GET-api-agora-token-cha_1770476090355.txt  Pasted-Error-saving-call-message-Error-Message-validation-fail_1775122317194.txt  Pasted-Profile-update-error-ValidationError-User-validation-fa_1769808959520.txt  Pasted-Running-gradlew-app-assembleRelease-in-home-expo-workin_1775516157492.txt  Pasted-Running-gradlew-app-assembleRelease-in-home-expo-workin_1775838436910.txt  Pasted-Running-gradlew-app-assembleRelease-in-home-expo-workin_1777389906229.txt  Pasted-Running-gradlew-app-assembleRelease-in-home-expo-workin_1777397734198.txt  Pasted-Running-gradlew-app-assembleRelease-in-home-expo-workin_1777403671316.txt  content-1777272166623.md
backend/: package-lock.json  package.json  server.js
frontend/: .easignore  .gitignore  App.tsx  app.json  eas.json  google-services.json  index.js  package-lock.json  package.json  start-all.js
helo/: .gitignore  .replit  App.tsx  app.json  babel.config.js  gateway.js  (+6 more)
(+453 files in other folders)
