[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "insightface>=0.7.3",
    "numpy>=2.4.4",
    "onnxruntime>=1.24.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
]
